[tool.poetry]
name = "rgov"
version = "0.1.5"
description = "Check if campsites are available on Recreation.gov"
authors = ["Jordan Sweet <jsbmgcontact@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
fake-useragent = "^0.1.11"
cleo = "^0.8.1"
python-daemon = "^2.3.0"

[tool.poetry.dev-dependencies]
python-language-server = "^0.36.2"
pytest = "^6.2.4"

[tool.poetry.scripts]
rgov = "rgov.application:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
